--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-logo">Header Logo</div>
+        <ul>
+            
+        </ul>
+    </div>
 </body>
 </html>
