--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <div class="header">
         <div class="header-logo">Header Logo</div>
         <ul>
-            
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
+    </div>
+    <div class="hero">
+        
     </div>
 </body>
 </html>
