--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </ul>
     </div>
     <div class="hero">
-        
+        <div class="heroMain">This website is awesome</div>
+        <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
     </div>
 </body>
 </html>
