--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="hero">
         <div class="heroMain">This website is awesome</div>
         <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
+        <button class="heroButton">Sign Up</button>
     </div>
 </body>
 </html>
