--- a/index.html
+++ b/index.html
@@ -20,7 +20,28 @@
         <div class="heroMain">This website is awesome</div>
         <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
         <button class="heroButton">Sign Up</button>
-        
+
+    </div>
+    <div class="information">
+        <div class="infoHeader">Some random information.</div>
+        <div class="infoBlocks">
+            <div class="infoCard">
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="infoCard">
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="infoCard">
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="infoCard">
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
