--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="heroMain">This website is awesome</div>
         <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
         <button class="heroButton">Sign Up</button>
-
+        <img>
     </div>
     <div class="information">
         <div class="infoHeader">Some random information.</div>
@@ -43,5 +43,12 @@
             </div>
         </div>
     </div>
+    <div class="quoteSection">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+            people will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <div class="signature"> - Thor, God of Thunder</div>
+    </div>
+
 </body>
 </html>
