--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </p>
         <div class="signature"> - Thor, God of Thunder</div>
     </div>
-
+    <div class="CTAction">
+        <div class="actionHeader">Call to action! It's time!</div>
+        <div class="actionText">Sign up for our product by clicking that button right over there!</div>
+        <button class="actionButton">Sign up</button>
+    </div>
 </body>
 </html>
