--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
         <div class="actionText">Sign up for our product by clicking that button right over there!</div>
         <button class="actionButton">Sign up</button>
     </div>
+    <footer>Copyright &copy; The Odin Project 2025</footer>
 </body>
 </html>
