--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <div class="header">
         <div class="header-logo">Header Logo</div>
         <ul>
@@ -55,5 +56,6 @@
         <button class="actionButton">Sign up</button>
     </div>
     <footer>Copyright &copy; The Odin Project 2025</footer>
+    </div>
 </body>
 </html>
