Fix spacing in header and hero sections

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         </ul>
     </div>
     <div class="hero">
-        <div class="heroMain">This website is awesome</div>
-        <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
-        <button class="heroButton">Sign Up</button>
-        <img>
+        <div class="heroContent">
+            <div class="heroMain">This website is awesome</div>
+            <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button class="heroButton">Sign Up</button>
+        </div>
+        <div class="heroImage">
+            <img>
+        </div>
     </div>
     <div class="information">
         <div class="infoHeader">Some random information.</div>
