Add images to info section and style them

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="infoHeader">Some random information.</div>
         <div class="infoBlocks">
             <div class="infoCard">
-                <img>
+                <img src="images/Square_200x200.svg.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="infoCard">
-                <img>
+                <img src="images/Square_200x200.svg.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="infoCard">
-                <img>
+                <img src="images/Square_200x200.svg.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="infoCard">
-                <img>
+                <img src="images/Square_200x200.svg.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
