--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="heroContent">
             <div class="heroMain">This website is awesome</div>
             <div class="hero2nd">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button class="heroButton">Sign Up</button>
+            <button type="button">Sign Up</button>
         </div>
         <div class="heroImage">
             <img>
@@ -55,9 +55,11 @@
         <div class="signature"> - Thor, God of Thunder</div>
     </div>
     <div class="CTAction">
-        <div class="actionHeader">Call to action! It's time!</div>
-        <div class="actionText">Sign up for our product by clicking that button right over there!</div>
-        <button class="actionButton">Sign up</button>
+        <div class="actionWords">
+            <div class="actionHeader">Call to action! It's time!</div>
+            <div class="actionText">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button type="button">Sign up</button>
     </div>
     <footer>Copyright &copy; The Odin Project 2025</footer>
     </div>
